[package]
name = "lmaths"
version = "1.0.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README"
documentation = "README"
description = "A short 2D Maths library"
homepage = "https://github.com/Carbone13/lmaths"
repository = "https://github.com/Carbone13/lmaths"
keywords = ["2d", "maths"]

[dependencies]
